namespace java com.cqfc.protocol.ticketissue

service SnatchDrawResultService{
 string snatchDrawResult(1:string lotteryId, 2:string issueNo);
}
